# llmc-code

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
llm-cli/: Architecture.md
llmcli/: __init__.py  __main__.py  agent.py  audit.py  checkpoint.py  code_index.py  config.py  cooldown.py  gitint.py  hooks.py  images.py  mcp.py  memory.py  mentions.py  orchestration.py  prompts.py  providers.py  remediation.py  repl.py  repo_graph.py  rerank.py  rules.py  session.py  spinner.py  tokens.py  tools.py
llmcode/: __init__.py  agent.py  code_index.py  config.py  memory.py  providers.py  repl.py  spinner.py
tests/: conftest.py  fake_mcp_server.py  fake_mcp_server_strid.py  integration_repo_map_budget.py  test_agent_integration.py  test_agent_loop.py  test_arg_aliases.py  test_audit.py  test_auto_compact_thrash.py  test_auto_nudge.py  test_checkpoint.py  test_cli_flags.py  test_cli_persist.py  test_code_index.py  test_code_search_recall.py  test_compact.py  test_config_load.py  test_context_budget.py  test_context_hygiene.py  test_context_limit.py  test_context_perf.py  test_cooldown.py  test_dryrun_seed_memory.py  test_gentle.py  test_gentle_spawn.py  test_gitint.py  test_hooks.py  test_images.py  test_mcp.py  test_mcp_toolname.py  test_memory.py  test_memory_agent.py  test_memory_cleanup.py  test_mentions.py  test_model_validate.py  test_normalize.py  test_orchestration.py  test_path_reliability.py  test_perf_fixes.py  test_permission_propagation.py  (+29 more)
